<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:backgroundTint="@color/gray"
    app:cardCornerRadius="@dimen/dp10"
    tools:context=".presentation.ui.fragments.episode.detail.EpisodeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp10">

        <TextView
            android:id="@+id/txt_id_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/episode_id"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/id"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_id_hint" />

        <TextView
            android:id="@+id/txt_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/episode_name"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_id" />

        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_name_hint" />

        <TextView
            android:id="@+id/txt_episode_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/episode"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_name" />

        <TextView
            android:id="@+id/txt_item_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/episode"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_episode_hint" />

        <TextView
            android:id="@+id/txt_created_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/created"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_episode" />

        <TextView
            android:id="@+id/txt_item_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:text="@string/created"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_created_hint" />

        <TextView
            android:id="@+id/txt_air_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/air_date"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_created" />

        <TextView
            android:id="@+id/txt_item_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:paddingTop="@dimen/dp5"
            android:text="@string/air_date"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_air_hint" />

        <ProgressBar
            android:id="@+id/progress_bar_episode_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="0dp"
            android:id="@+id/group_episode_detail"
            app:constraint_referenced_ids="txt_item_id,txt_item_name,txt_item_episode,txt_item_created,txt_item_air_date"
            android:layout_height="0dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>